--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Diretório para salvar os arquivos anexados
-root.locationUnix=/home/unix/Downloads/tmp/
+root.locationUnix=/home/tmp/
 root.locationWin=c:\tmp\
 
 spring.servlet.multipart.enabled=true
