--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,6 @@
 	
 	<groupId>br.com.page</groupId>
 	<artifactId>gerenciamento-eletronico-imagens</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>gerenciamento-eletronico-imagens</name>
 	<description>Desenvolver um serviço REST para gerenciamento eletronico de imagens.</description>
@@ -57,6 +56,17 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>3.2.2</version>
+				<configuration>
+					<warName>gerenciador</warName>
+					<outputDirectory>war</outputDirectory>
+					<failOnMissingWebXml>false</failOnMissingWebXml>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
