--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,8 +19,8 @@ spring.datasource.driver-class-name=org.h2.Driver
 
 
 spring.jpa.hibernate.ddl-auto=create
-spring.jpa.properties.show_sql=true
-spring.jpa.properties.format_sql=true
+spring.jpa.hibernate.format_sql=true
+spring.jpa.show-sql=true
 
 
 
